doc/examples/InvalidTests/TestArray3.agl
c : Array<Array<Point>> = [[(1,2), (3,4)], [(1,2), (3,4)]]; # correto. Type: Array<Array<Point>> ; Assignment Type: Array<Array<Point>>

c = [(1,2), (3,4), (5,6), (7,8), (9,10)]; # dรก erro. Type:  Array<Array<Point>> ; Assignment Type: Array<Point>
